# urcl-llvm

./: .gitignore  .gitmodules  Cargo.toml  Makefile  OUTPUT_NOTES.md  a.out  api.h  gen_urclos_fs.py  generic-rt.c  generic_rt.c  rustfmt.toml  stdlib-main.c  stdlib-rt.c  urcl.s  urclos-del.patch  urclos-rt.c  urclos_rt.c
benchmarks/: mandelbrot-bf.urcl  mandelbrot-hexagn.urcl  mandelbrot_f16.urcl
examples/: define.urcl  f16_op.urcl  f32_op.urcl  fib.urcl  fib_512bits.urcl  float_op.urcl  hello-core.urcl  hello.urcl  port_proposal_2.urcl  print_float.urcl  relative.urcl
src/: main.rs
tests/: basic.urcl  basic1.urcl  basic2.urcl  complex.urcl  core.urcl  dw.urcl  m_nest.urcl  macro_basic.urcl  macro_complex.urcl  macro_set.urcl  md_basic.urcl  md_complex.urcl  md_core.urcl  mi_basic.urcl  mi_complex.urcl  mi_core.urcl  mi_imm.urcl  mi_set.urcl  runtime.c  set.urcl  special_regs.urcl
urcl-ast/: Cargo.toml
urcl-ast/src/: any.rs  imm.rs  inst.rs  lib.rs  port.rs  reg.rs
urcl-frontend/: Cargo.toml
urcl-frontend/src/: ast.rs  lexer.rs  lib.rs  parser.rs
urcl-frontend/src/parser/: error.rs  macro_expr.rs  macro_imm.rs  macros.rs  mod.rs  operand.rs  util.rs
urcl-llvm-backend/: Cargo.toml
urcl-llvm-backend/src/: float.rs  float_size.rs  lib.rs  util.rs
