[workspace]
members = ["urcl-frontend", "urcl-llvm-backend"]

[package]
name = "urcl-llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
urcl-frontend = { path = "urcl-frontend" }
urcl-llvm-backend = { version = "0.1.0", path = "urcl-llvm-backend" }
